--- a/fizzbuzzbasic/pom.xml
+++ b/fizzbuzzbasic/pom.xml
@@ -6,8 +6,16 @@
         <artifactId>interview_case</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
-    <artifactId>stringremove</artifactId>
-    <name>stringremove</name>
+    <artifactId>fizzbuzzbasic</artifactId>
+    <name>fizzbuzzbasic</name>
     <url>http://maven.apache.org</url>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
