factorypattern module commit

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>stringremove</module>
         <module>fizzbuzzbasic</module>
+        <module>factorypattern</module>
     </modules>
 
     <properties>
